<resources>

    <string name="home_title_tab1">消费</string>
    <string name="home_title_tab2">展会</string>
    <string name="home_title_tab3">活动</string>
    <string name="home_title_tab4">消息</string>
    <string name="home_title_tab5">我的</string>


    <string name="app_name">浙里金消</string>
    <string name="app_name_debug">浙里金消测试版</string>


    <string name="login_code_notify">*每日短信验证码上限3次，获取验证码后请勿刷新或退出页面，达到上限后请于次日再次尝试</string>
    <string name="login_private_policy">我已阅读并同意《用户协议》和《隐私政策》</string>

<!--    \n1、开启设备信息权限: 您允许我们获取您的设备信息后，方便我们为您的设备进行标识，给您提供手机号一键登录服务、主页面浏览服务和 保障账号安全服务。-->


    <string name="register_agreement_content">亲爱的用户，为了保障您的权益，请在登录前阅读并理解《用户协议》和《隐私政策》的条款内容，以了解您的权力和义务。着重关注以下内容：
        \n1、开启相机权限: 您允许我们访问相机功能后，我们将会提供扫码服务，图片和视频。
        \n2、储存权限: App在线更新、上传头像图片/视频等需要用到手机存储权限。
        \n3、位置信息权限: 内容推送等需要用到位置信息权限。
        \n4、为了更好得为您服务，我们引用了第三方SDK，详情见《第三方数据合作列表》。
        \n点击同意即表示已充分阅读并接受以上协议的内容。阅读过程中，若对相关协议或其中条款有任何疑问，可咨询我们的平台客服。我们将严格按照协议内容执行，尽力为您提供更好的服务。</string>
    <string name="register_agreement_1">《用户协议》</string>
    <string name="register_agreement_2">《隐私政策》</string>
    <string name="register_agreement_3">点击同意即表示已充分阅读并接受以上协议的内容。阅读过程中，若对相关协议或其中条款有任何疑问，可咨询我们的平台客服。我们将严格按照协议内容执行，尽力为您提供更好的服务。</string>
    <string name="register_disagree">不同意</string>
    <string name="register_agree">同意</string>



    <!-- 升级对话框 -->
    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">升级通知</string>

    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

</resources>